--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.2",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
