--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=18.0.0 <19.0.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5000",
     "build": "tsc && vite build",
     "format": "npx prettier --write ./src",
     "lint": "eslint . --ext .ts,.tsx",
