--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.14.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "google-map-react": "^2.2.1",
     "i18next": "^23.4.0",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
@@ -32,6 +33,10 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@googlemaps/typescript-guards": "^2.0.3",
+    "@iconify/icons-mdi": "^1.2.47",
+    "@iconify/react": "^4.1.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
