--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.2",
     "react-multi-carousel": "^2.8.4",
+    "react-pdf": "^7.3.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2"
   },
