--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "npm": ">8.0.0",
     "node": ">=18.0.0 <19.0.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts?(x)": [
+      "npx prettier --write"
+    ]
+  },
   "scripts": {
     "dev": "vite --port 5000",
     "build": "tsc && vite build",
     "format": "npx prettier --write ./src",
     "lint": "eslint . --ext .ts,.tsx",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "husky install && npx husky add .husky/pre-commit 'npm run format' && npx husky add .husky/pre-push 'npm run format'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -47,6 +59,8 @@
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
