--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.2.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -36,14 +37,17 @@
     "google-map-react": "^2.2.1",
     "i18next": "^23.4.0",
     "i18next-http-backend": "^2.2.1",
+    "module": "^1.2.5",
+    "pdfjs-dist": "^3.9.179",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.45.4",
     "react-i18next": "^13.0.2",
     "react-multi-carousel": "^2.8.4",
     "react-pdf": "^7.3.3",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@googlemaps/typescript-guards": "^2.0.3",
@@ -63,6 +67,7 @@
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-static-copy": "^0.17.0"
   }
 }
