--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview",
     "postinstall": "husky install"
-
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -46,6 +45,7 @@
     "react-i18next": "^13.0.2",
     "react-multi-carousel": "^2.8.4",
     "react-pdf": "^7.3.3",
+    "react-pin-input": "^1.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "yup": "^1.2.0"
