--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next": "^23.4.0",
     "i18next-http-backend": "^2.2.1",
     "module": "^1.2.5",
+    "notistack": "^3.0.1",
     "pdfjs-dist": "^3.9.179",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
